# prepeet

./: .gitignore  README.md  setup_prepeet_structure.py
apps/prepeet-template/: package-lock.json  package.json
apps/prepeet-template/src/app/: layout.tsx  providers.tsx
apps/prepeet-template/src/app/(dashboard)/: layout.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/: page.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/[id]/: page.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/email/: page.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/new/: page.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/push/: page.tsx
apps/prepeet-template/src/app/(dashboard)/campaigns/sms/: page.tsx
apps/prepeet-template/src/app/(dashboard)/templates/: page.tsx
apps/prepeet-template/src/app/(dashboard)/templates/[id]/: page.tsx
apps/prepeet-template/src/app/(dashboard)/templates/new/: page.tsx
apps/prepeet-template/src/components/: app-sidebar.tsx  nav-main.tsx  site-header.tsx
apps/prepeet-template/src/components/campaigns/: CreateCampaignActions.tsx  CreateCodeTemplate.tsx  ImportCampaignDialog.tsx
apps/prepeet-template/src/components/editor/: CodeEditor.tsx  PreviewPanel.tsx  VariablePanel.tsx
apps/prepeet-template/src/components/templates/: TemplateCard.tsx  TemplateList.tsx
apps/prepeet-template/src/components/ui/: sidebar.tsx
apps/prepeet-template/src/hooks/: use-mobile.ts
apps/prepeet-template/src/lib/api/: templates.ts
apps/prepeet-template/src/lib/constants/: templates.ts
apps/prepeet-template/src/lib/stores/: editor-store.ts
apps/prepeet-template/src/lib/utils/: jinja2-renderer.ts
apps/prepeet-template/src/types/: template.ts
apps/web/: package.json
infra/compose/: docker-compose.yml
infra/compose/init/: create-dbs.sql
services/app-review/: docker-compose.yml  pyproject.toml
services/auth/: Dockerfile  docker-compose.yml  pyproject.toml
services/auth/docs/: prepeet_auth_system_doc.md
services/interview/: docker-compose.yml  pyproject.toml
services/notification/: alembic.ini  main.py  pyproject.toml
services/notification/app/: main.py
services/notification/app/api/: notifications.py
services/notification/app/consumers/: notification_consumer.py
services/notification/app/core/: exceptions.py  idempotency.py  logging.py  metrics.py  providers.py  queue.py  redis_client.py  resilience.py  routing.py  security.py  settings.py  templates.py  throttle.py
services/notification/app/db/: base.py  session.py
services/notification/app/drivers/email/: console_driver.py  sendgrid_driver.py  ses_driver.py
services/notification/app/drivers/sms/: console_driver.py  sns_driver.py  twilio_driver.py
services/notification/app/models/: __init__.py  attachment.py  event.py  message.py  suppression.py  tenant.py
services/notification/app/schemas/: message.py
services/notification/app/services/: dispatcher.py
services/notification/app/templates/en-GB/: magic_link_login.html  otp_login.txt
services/notification/docs/: prepeet_notification_system_doc.md
services/notification/migrations/: env.py
services/resume/: docker-compose.yml  pyproject.toml
services/template/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  otel-collector-config.yaml  prometheus.yaml  pyproject.toml
services/template/app/: main.py
services/template/app/api/v1/: deps.py  health.py  render.py  templates.py
services/template/app/core/: config.py  logging.py  security.py  telemetry.py
services/template/app/domain/templates/: exceptions.py  models.py  renderer.py  schemas.py  services.py
services/template/app/infrastructure/db/: base.py  session.py
services/template/app/infrastructure/db/migrations/: env.py
services/template/app/infrastructure/db/migrations/versions/: b9e7e81188fe_initial_tables.py  d215f44db5b4_add_category_to_template.py
services/template/app/infrastructure/db/models/: templates.py
services/template/tests/: conftest.py
services/template/tests/integration/api/: test_flow.py
services/template/tests/unit/domain/templates/: test_renderer.py  test_services.py  test_validation.py
services/user/: Dockerfile  docker-compose.yml  pyproject.toml
services/worker/: Dockerfile  docker-compose.yml  pyproject.toml
