[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.5",
    "fastapi>=0.120.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.6",
    "pika>=1.3.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
