[project]
name = "notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.62",
    "botocore>=1.40.62",
    "fastapi>=0.120.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.4",
    "pika>=1.3.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "structlog>=25.5.0",
    "twilio>=9.8.5",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250913",
]
